--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -1,10 +1,3 @@
-name: Update Event Schedule
-
-on:
-  schedule:
-    - cron: '0 0 * * 1'  # Every Monday at 00:00 UTC
-  workflow_dispatch:      # Manual trigger option
-
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -12,6 +5,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Confirm scrape-wiki.js exists
+        run: ls -l scrape-wiki.js
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
