--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -1,3 +1,10 @@
+name: Update Event Schedule
+
+on:
+  schedule:
+    - cron: '0 0 * * 1'  # Every Monday at 00:00 UTC
+  workflow_dispatch:      # Manual trigger option
+
 jobs:
   update:
     runs-on: ubuntu-latest
