--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -1,5 +1,8 @@
 name: Update Event Schedule
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: '0 0 * * 1'  # Every Monday at 00:00 UTC
