--- a/.github/workflows/Update-Event-Schedule.yml
+++ b/.github/workflows/Update-Event-Schedule.yml
@@ -1,9 +1,12 @@
 name: Update Event Schedule
 
+permissions:
+  contents: write
+
 on:
   schedule:
-    - cron: '0 0 * * 1'  # Every Monday at 00:00 UTC
-  workflow_dispatch:      # Manual trigger option
+    - cron: "0 0 * * 1" # Every Monday at 00:00 UTC
+  workflow_dispatch:
 
 jobs:
   update:
@@ -14,6 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Confirm scrape-wiki.js exists
         run: ls -l scrape-wiki.js
@@ -21,7 +25,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install dependencies
         run: npm install axios cheerio
