--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "css-select": "^5.1.0",
     "expo": "53.0.13",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -44,7 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "cheerio": "^1.1.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
