--- a/app.json
+++ b/app.json
@@ -36,10 +36,10 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/WETicon.png",
+          "image": "./assets/images/SplashIcon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#111"
+          "backgroundColor": "#17171C"
         }
       ],
       "expo-notifications"
