--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Wildy Events",
     "slug": "wilderness-event-tracker",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/WETicon.png",
     "scheme": "wildernesseventtracker",
@@ -11,14 +11,14 @@
     "jsEngine": "hermes",
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.dannihil.wildernesseventtracker",
+      "bundleIdentifier": "com.dannihil.wildytracker",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSUserNotificationUsageDescription": "We use notifications to alert you before Wilderness events."
       }
     },
     "android": {
-      "package": "com.dannihil.wildernesseventtracker",
+      "package": "com.dannihil.wildytracker",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/WETicon.png",
         "backgroundColor": "#111"
@@ -36,10 +36,10 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/SplashIcon.png",
+          "image": "./assets/images/RuneNodeLogo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#111"
+          "backgroundColor": "#f5ecdd"
         }
       ],
       "expo-notifications"
