--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.6",
     "expo-notifications": "^0.31.3",
     "expo-router": "~5.1.2",
@@ -43,12 +44,12 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
