--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wilderness-event-tracker",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
@@ -32,6 +33,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "node-fetch": "^2.7.0",
     "puppeteer": "^24.16.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -44,13 +46,14 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "wtf_wikipedia": "^10.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.1.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
