--- a/.github/workflows/Update-Event-Schedule.yml
+++ b/.github/workflows/Update-Event-Schedule.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run scraper with logging
         run: |
-          node utils/fetchWikiEvents.js > scraper.log 2>&1 || (echo "Scraper failed"; cat scraper.log; exit 1)
+          node fetchWikiEvents.js > scraper.log 2>&1 || (echo "Scraper failed"; cat scraper.log; exit 1)
 
       - name: Show scraper log
         run: cat scraper.log
