--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Wildy Events",
     "slug": "wilderness-event-tracker",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "orientation": "portrait",
     "icon": "./assets/images/WETicon.png",
     "scheme": "wildernesseventtracker",
@@ -24,10 +24,7 @@
         "backgroundColor": "#111"
       },
       "edgeToEdgeEnabled": true,
-      "permissions": [
-        "VIBRATE",
-        "RECEIVE_BOOT_COMPLETED"
-      ]
+      "permissions": ["VIBRATE", "RECEIVE_BOOT_COMPLETED"]
     },
     "web": {
       "bundler": "metro",
